@@ -1,4 +1,5 @@
 package com.ebook.backend.controller;
+
 import com.ebook.backend.entity.Book;
 import com.ebook.backend.service.BookService;
 import com.ebook.backend.utils.messagegutils.Message;
@@ -8,7 +9,6 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
-import java.math.BigDecimal;
 import java.util.List;
 import java.util.Map;
 
@@ -34,7 +34,7 @@ public class BookController {
         String isbn = params.get("isbn");
         String  type = params.get("type");
         String author =params.get("author");
-        Double price = new Double(params.get("price")) ;
+        Integer price = Integer.valueOf(params.get("price"));
         Integer num= Integer.valueOf(params.get("num"));
         String description =params.get("description");
         String tmp = params.get("state");
@@ -42,6 +42,6 @@ public class BookController {
         if(tmp.equals("true")) state =true;
         else state =false;
         String image =params.get("image");
-        return bookService.addBook(isbn,bookName,type,author,description,num,image,state, BigDecimal.valueOf(price));
+        return bookService.addBook(isbn,bookName,type,author,description,num,image,state, price);
     }
 }
